...
    android:layout_height="match_parent"

tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/Start"
        android:layout_width="283dp"
        android:layout_height="75dp"
        android:text="Start Spill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
...
