...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/alt1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#27A3B3"
        android:text="Option 1"
        app:layout_constraintBottom_toTopOf="@+id/alt2"
        app:layout_constraintEnd_toEndOf="parent"
...
